# bazel-gql-repro

./: .gitignore  WORKSPACE  package.json
app/: BUILD.bazel  codegen.build.yml  schema.graphql
